# chunked-hasher-rs

./: Cargo.toml  shell.nix
src/: lib.rs
src/hashers/: mod.rs  sha2.rs
test-data/: newfile.txt  original.txt
