[package]
name = "chunked_hasher"
version = "0.0.1"
authors = ["Ian Johannesen <ij@opsplaza.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
hex = "0.4.2"
sha2 = "0.8.1"

[lib]
name = "chunked_hasher"
crate-type = [ "lib", "staticlib", "cdylib" ]
path = "src/lib.rs"
